--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="price_null">0₽</string>
     <string name="input_name">Название</string>
     <string name="activity_items_list_title">Учет бюджета</string>
+
+    <string name="tab_incomes">Доходы</string>
+    <string name="tab_expenses">Расходы</string>
+    <string name="tab_balance">Баланс</string>
+
+    <string-array name="tab_title" >
+        <item>@string/tab_incomes</item>
+        <item>@string/tab_expenses</item>
+        <item>@string/tab_balance</item>
+    </string-array>
+
+
 </resources>
